--- a/config/install/sitelocation.settings.yml
+++ b/config/install/sitelocation.settings.yml
@@ -1,3 +1,3 @@
 sitelocation_country: 'United States'
-sitelocation_city: 'New York'
+sitelocation_city: 'New York, NY'
 sitelocation_timezone: 'America/New_York'
